<resources>
    <string name="app_name">Student Organizer</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="task">Task</string>
    <string name="account">Account</string>

    <string name="mon">Понедельник</string>
    <string name="tue">Вторник</string>
    <string name="wed">Среда</string>
    <string name="thu">Четверг</string>
    <string name="fri">Пятница</string>
    <string name="sat">Суббота</string>
    <string name="sun">Воскресенье</string>

    <string name="taskName">Название задачи</string>
    <string name="taskDescription">Описание задачи</string>
    <string name="addTask">Добавить задачу</string>
    <string name="saveTask">Сохранить</string>
    <string name="deleteTask">Удалить</string>
    <string name="attentionTask">Укажите название задачи</string>
    <string name="userName">Елена</string>
    <string name="hiUserName">Привет, Елена!</string>
    <string name="accountHelpButton">Помощь</string>
    <string name="todayTasks">Текущие задачи:</string>

    <string name="addSubj">Добавить предмет</string>
    <string name="subjName">Название предмета</string>
    <string name="subjPed">ФИО преподавателя</string>
    <string name="subjRoom">Аудитория</string>
    <string name="attentionSubj">Укажите название предмета</string>

    <string name="helpButton">Назад</string>
    <string name="helpHeader">Как работать в приложении?</string>
    <string name="helpHeader1">Задачи</string>
    <string name="helpDescription1">Ставьте перед собой задачи! Напишите то, что хотите сделать, и нажмите на кнопку добавить.</string>
    <string name="helpHeader2">Расписание</string>
    <string name="helpDescription2">Составьте расписание учебных занятий! Укажите название занятия, имя преподавателя, номер аудитории и время начала и окончания занятия.</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>