...
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/SubjName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subjName"
            android:maxLength="50" />

        <TextView
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attentionSubj"
            android:textColor="@color/design_default_color_error" />

        <EditText
            android:id="@+id/SubjPed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/subjPed"
            android:inputType="textMultiLine" />
...
